unpackaged/main/default/objects/UniqueEntry__connectedAppSettings__c/UniqueEntry__connectedAppSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Connected App Settings</label>
</CustomObject>