unpackaged/main/default/objects/UniqueEntry__connectedAppSettings__c/fields/UniqueEntry__Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>