unpackaged/main/default/objects/UniqueEntry__connectedAppSettings__c/fields/UniqueEntry__Password__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>