unpackaged/main/default/objects/UniqueEntry__connectedAppSettings__c/fields/UniqueEntry__User_Name__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__User_Name__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>